# compiz

./: 0-jr-NOTES  CMakeLists.txt  COPYING.LGPL  INSTALL  INSTALL-NOTES-arch-jr  Makefile
cmake/: CompizCommon.cmake  FindCompiz.cmake  base.cmake  recompile_gsettings_schemas_in_dir_user_env.cmake
compizconfig/ccsm/: CMakeLists.txt
compizconfig/ccsm/ccm/: Pages.py  Settings.py  Utils.py  Widgets.py
compizconfig/compizconfig-python/: CMakeLists.txt  setup.py
compizconfig/compizconfig-python/src/: compizconfig.pyx.rej
compizconfig/compizconfig-python/tests/: compiz_config_test.py
compizconfig/gsettings/gsettings_backend_shared/: CMakeLists.txt  ccs_gsettings_wrapper_factory.c
compizconfig/libcompizconfig/cmake/: FindCompizConfig.cmake
compizconfig/libcompizconfig/src/: ccs-private.h  ccs_backend_loader.c  ccs_config_file.c
compizconfig/mocks/libcompizconfig/: compizconfig_ccs_plugin_mock.h
debian/: changelog  compiz-gnome.install  compiz-mate.install  control  python3-compizconfig.install  rules
gtk/window-decorator/: decorator.c  events.c  gtk-window-decorator.h  gwd-settings-xproperty-storage.c  gwd-theme-cairo.c  gwd-theme-metacity.c  gwd-theme.c  wnck.c
include/core/: atoms.h  modifierhandler.h
plugins/addhelper/src/: addhelper.h
plugins/animation/src/: private.h
plugins/animationaddon/src/: animation_tex.h  private.h
plugins/animationjc/src/: private.h
plugins/animationplus/src/: animation_tex.h  private.h
plugins/annotate/src/: annotate.cpp  annotate.h
plugins/bench/src/: bench.h  bench_tex.h
plugins/bicubic/src/: bicubic.h
plugins/blur/src/: blur.cpp  blur.h
plugins/ccp/src/: ccp.h
plugins/commands/src/: commands.h
plugins/copytex/src/: copytex.h
plugins/crashhandler/src/: crashhandler.h
plugins/cubeaddon/src/: cubeaddon.h
plugins/dbus/src/: dbus.cpp  dbus.h
plugins/decor/: decor.xml.in
plugins/decor/src/: decor.h
plugins/expo/: expo.xml.in
plugins/expo/src/: expo.cpp  expo.h
plugins/extrawm/src/: extrawm.h
plugins/ezoom/: ezoom.xml.in
plugins/ezoom/src/: ezoom.h
plugins/fade/src/: fade.h
plugins/fadedesktop/src/: fadedesktop.h
plugins/freewins/src/: action.cpp  freewins.h
plugins/gears/src/: gears.h
plugins/gnomecompat/: gnomecompat.xml.in
plugins/gnomecompat/src/: gnomecompat.h
plugins/grid/: grid.xml.in
plugins/grid/src/: grid.h
plugins/imgjpeg/src/: imgjpeg.h
plugins/imgsvg/src/: imgsvg.h
plugins/loginout/src/: loginout.h
plugins/mag/src/: mag.h
plugins/matecompat/src/: matecompat.h
plugins/maximumize/src/: maximumize.h
plugins/mblur/src/: mblur.h
plugins/mousepoll/src/: private.h
plugins/move/src/: move.h
plugins/neg/src/: neg.h
plugins/notification/src/: notification.h
plugins/obs/src/: obs.h
plugins/opacify/src/: opacify.h
plugins/opengl/src/: screen.cpp  vertexbuffer.cpp
plugins/place/src/: place.cpp  place.h
plugins/put/src/: put.h
plugins/reflex/src/: reflex.h
plugins/resize/: resize.xml.in
plugins/resizeinfo/src/: resizeinfo.h
plugins/ring/src/: ring.h
plugins/scale/: scale.xml.in
plugins/scaleaddon/src/: scaleaddon.h
plugins/scalefilter/src/: scalefilter.h
plugins/screenshot/src/: screenshot.h
plugins/session/src/: session.h
plugins/shelf/src/: shelf.h
plugins/shift/src/: shift.h
plugins/showdesktop/src/: showdesktop.h
plugins/showmouse/src/: showmouse.h  showmouse_tex.h
plugins/snap/src/: snap.h
plugins/wallpaper/: wallpaper.xml.in
src/: CMakeLists.txt  atoms.cpp  event.cpp  outputdevices.h  privatescreen.h  privatesignalsource.h  screen.cpp  window.cpp
(+28 files in other folders)
